--- a/TPT-cn.vcxproj.filters
+++ b/TPT-cn.vcxproj.filters
@@ -1733,6 +1733,9 @@
     <ClInclude Include="src\tasks\TaskWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="data\Lang.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\graphics\OpenGLDrawMethods.inl">
