--- a/resources/powder-res.rc
+++ b/resources/powder-res.rc
@@ -1,4 +1,5 @@
-#define IDI_ICON1 101
-#define IDI_ICON2 102
+#include "resource.h"
+
 IDI_ICON1 ICON DISCARDABLE "powder.ico"
 IDI_ICON2 ICON DISCARDABLE "document.ico"
+IDI_EVENTCOMPAT LUASCRIPT "../src/lua/luascripts/eventcompat.lua"
