going back to old icon for now. Also Windows icon is now centered, and linux icon has higher 128x128 resolution.

--- a/resources/powder-res.rc
+++ b/resources/powder-res.rc
@@ -1,8 +1,5 @@
 #include "resource.h"
 
-IDI_ICON1 ICON DISCARDABLE "icon_256.ico"
-IDI_ICON2 ICON DISCARDABLE "icon_96.ico"
-IDI_ICON3 ICON DISCARDABLE "icon_64.ico"
-IDI_ICON4 ICON DISCARDABLE "icon_48.ico"
+IDI_ICON ICON DISCARDABLE "icon.ico"
 IDI_DOC_ICON ICON DISCARDABLE "document.ico"
 IDI_EVENTCOMPAT LUASCRIPT "../src/lua/luascripts/eventcompat.lua"
