Ignore more VS crap

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ config.log
 *.pyc
 site_scons/site_tools/mfprogram/*.pyc
 site_scons/site_tools/gch/*.pyc
-.vscode/ipch
+.vscode/
+.vs/
 
 screenshot_*
