--- a/.gitignore
+++ b/.gitignore
@@ -69,5 +69,7 @@ site_scons/site_tools/mfprogram/*.pyc
 site_scons/site_tools/gch/*.pyc
 .vscode/
 .vs/
+# Intentional merge conflict (meson stuff)
+subprojects/
 
 screenshot_*
