--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,8 @@ jobs:
         run: |
           python vsproject.py
           Invoke-WebRequest https://starcatcher.us/TPT/Required%20Libraries.zip -O Libraries.zip
-          Expand-Archive -Path Libraries.zip -Force       
+          Expand-Archive -Path Libraries.zip -Force
+          "C:\Program Files (x86)\Microsoft Visual Studio\2019\*\VC\Auxiliary\Build\vcvarsamd64_x86.bat"
       - name: build
         run: msbuild /p:Platform="Win32"
       - name: upload artifact
