--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,9 @@ jobs:
           Invoke-WebRequest https://starcatcher.us/TPT/Required%20Libraries.zip -O Libraries.zip
           Expand-Archive -Path Libraries.zip -Force
       - name: build
+        shell: cmd
         run: |
-          "C:\Program Files (x86)\Microsoft Visual Studio\2019\*\VC\Auxiliary\Build\vcvarsamd64_x86.bat"
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\*\VC\Auxiliary\Build\vcvars64.bat"
           msbuild /p:Platform="Win32"
       - name: upload artifact
         uses: actions/upload-artifact@v2.2.0
