--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         shell: cmd
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          msbuild /p:Platform="Win32"
+          msbuild /p:Platform="Win32" /m
       - name: upload artifact
         uses: actions/upload-artifact@v2.2.0
         with:
