Compress font data

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,9 +1,15 @@
+to_array = generator(
+	import('python').find_installation('python3'),
+	output: [ '@BASENAME@.cpp', '@BASENAME@.h' ],
+	arguments: [ join_paths(meson.current_source_dir(), 'to_array.py'), '@BUILD_DIR@', '@OUTPUT0@', '@OUTPUT1@', '@INPUT@', '@EXTRA_ARGS@' ]
+)
+
 data_files = files(
-	'font.cpp',
 	'hmap.cpp',
 	'icon.cpp',
 	'images.cpp',
 )
+data_files += to_array.process('font.bz2', extra_args: 'compressed_font_data')
 
 powder_files += data_files
 render_files += data_files
