--- a/src/lua/luascripts/meson.build
+++ b/src/lua/luascripts/meson.build
@@ -1,3 +1,1 @@
-resources_files += files(
-	'eventcompat.lua',
-)
+luaconsole_files += to_array.process('eventcompat.lua', extra_args: 'eventcompat_lua')
