Update default future_major
I forgot to update meson_options.txt when committing 360297c. At that
point, FUTURE_SAVE_VERSION in Config.h was 96. Without that, the game
can't load saves with GOL because they save as v96 elements.

Please update your existing build sites with

  meson configure -Dfuture_major=96

as this change won't affect them unless you do.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -73,8 +73,8 @@ option(
 	'future_major',
 	type: 'integer',
 	min: 0,
-	value: 95,
-	description: 'Future major version, used for debugging and in snapshots, only relevant if at least one of \'debug\' and \'snapshot\' is true'
+	value: 96,
+	description: 'Future major version, used for debugging and in snapshots, only relevant if at least one of \'snapshot\', \'beta\', or \'debug\' is true, or if \'mod_id\' is set'
 )
 option(
 	'future_minor',
